@@ -131,6 +131,7 @@ preferences pref_init = {
 		.warn_scripts_run = TRUE,
 		.show_thumbnails = TRUE,
 		.thumbnail_size = 256,
+		.graxpert_gpu = FALSE,
 		.default_rendering_mode = LINEAR_DISPLAY,
 		.display_histogram_mode = LINEAR_DISPLAY,
 		.catalog[0] = TRUE,
@@ -502,6 +503,7 @@ struct settings_access all_settings[] = {
 	{ "gui", "selected_scripts", STYPE_STRLIST, N_("list of scripts selected from the repository"), &com.pref.selected_scripts },
 	{ "gui", "warn_scripts_run", STYPE_BOOL, N_("warn when launching a script"), &com.pref.gui.warn_scripts_run },
 	{ "gui", "show_thumbnails", STYPE_BOOL, N_("show thumbnails in open dialog"), &com.pref.gui.show_thumbnails },
+	{ "gui", "graxpert_gpu", STYPE_BOOL, N_("whether to use the GPU for GraXpert"), &com.pref.gui.graxpert_gpu },
 	{ "gui", "thumbnail_size", STYPE_INT, N_("size of the thumbnails"), &com.pref.gui.thumbnail_size },
 	{ "gui", "selection_guides", STYPE_INT, N_("number of elements of the grid guides"), &com.pref.gui.selection_guides },
 	{ "gui", "show_deciasec", STYPE_BOOL, N_("show tenths of arcseconds on hover"), &com.pref.gui.show_deciasec },
