@@ -260,6 +260,7 @@ struct gui_config {
 	double mouse_speed_limit; // Defines a mximum step size for GDK_SCROLL_SMOOTH actions
 	struct mouse_config mouse_cfg; // String representation of mouse & scroll actions
 	struct editor_config editor_cfg; // Configuration for the script editor
+	gboolean graxpert_gpu; // Persistent variable for whether to use the GPU for GraXpert
 };
 
 // TODO: is any of the following used for something else than providing the default GUI value?
